==> aabzel/trunk/source/mcal/mcal_stm32f4/gpio/gpio_mcal.c <==
#include "gpio_mcal.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include "bit_utils.h"
#include "board_config.h"
#include "data_utils.h"
#include "debugger.h"
#include "gpio_config.h"
#include "gpio_custom_drv.h"
#include "gpio_custom_isr.h"
#include "gpio_custom_types.h"
#include "log.h"
#include "stm32f4xx_hal.h"

static GpioPullMode_t GpioStm32Pull2GeneralPull(GpioStm32Pull_t stm32_pull_code) {
    GpioPullMode_t general_pull_code = GPIO__PULL_UNDEF;
    switch((uint32_t)stm32_pull_code) {
    case STM32_PULL_AIR:
        general_pull_code = GPIO__PULL_AIR;
        break;
    case STM32_PULL_UP:
        general_pull_code = GPIO__PULL_UP;
        break;
    case STM32_PULL_DOWN:
        general_pull_code = GPIO__PULL_DOWN;
        break;
    case STM32_PULL_UNDEF:
        general_pull_code = GPIO__PULL_UNDEF;
        break;
    default:
        LOG_ERROR(GPIO, "UndefSTMPullMode %u", stm32_pull_code);
        break;
    }
    return general_pull_code;
}

bool gpio_clock_init(void) {
    bool res = false;
    LOG_WARNING(GPIO, "ClockInit");
    uint8_t cnt = 0;
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "Clock On");
#endif /*HAS_LOG*/

#ifdef GPIOA
    __HAL_RCC_GPIOA_CLK_ENABLE();
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "A ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOB
    __HAL_RCC_GPIOB_CLK_ENABLE();
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "B ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOC
    __HAL_RCC_GPIOC_CLK_ENABLE();
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "C ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOD
    __HAL_RCC_GPIOD_CLK_ENABLE();
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "D ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOE
    __HAL_RCC_GPIOE_CLK_ENABLE();
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "E ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOF
    __HAL_RCC_GPIOF_CLK_ENABLE();
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "F ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOG
    __HAL_RCC_GPIOG_CLK_ENABLE();
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "G ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOH
    __HAL_RCC_GPIOH_CLK_ENABLE();
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "H ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif
    if(cnt) {
        res = true;
    } else {
        res = false;
    }
    return res;
}

GpioDir_t gpio_dir_get(uint8_t pad_num) {
    GpioDir_t dir = GPIO_DIR_UNDEF;
    GpioStm32Mode_t mode = gpio_stm_mode_get(pad_num);
    dir = GpioStmDirToDir(mode);
    return dir;
}

static uint32_t GpioModeToStm32Mode(GpioApiMode_t mode) {
    uint32_t stm_mode = 0;
    switch((uint32_t)mode) {
    case GPIO_API_MODE_GPIO:
        stm_mode = GPIO_MODE_OUTPUT_PP;
        break;
    case GPIO_API_MODE_OUTPUT:
        stm_mode = GPIO_MODE_OUTPUT_PP;
        break;
    case GPIO_API_MODE_I2C:
        stm_mode = GPIO_MODE_AF_OD;
        break;
    case GPIO_API_MODE_INPUT:
        stm_mode = GPIO_MODE_INPUT;
        break;
    case GPIO_API_MODE_ALT1:
        stm_mode = GPIO_MODE_AF_PP;
        break;
    case GPIO_API_MODE_HW_PWM:
        stm_mode = GPIO_MODE_AF_PP;
        break;
    case GPIO_API_MODE_ANALOG:
        stm_mode = GPIO_MODE_ANALOG;
        break;
    case GPIO_API_MODE_INPUT_EXINT:
        stm_mode = GPIO_MODE_IT_RISING;
        break;
    default:
        break;
    } // switch(mode)
    return stm_mode;
}

GPIO_TypeDef* Port2PortPtr(Port_t port_num) {
    GPIO_TypeDef* GpioPort = NULL;
    switch((uint8_t)port_num) {
#ifdef GPIOA
    case PORT_A:
        GpioPort = GPIOA;
        break;
#endif

#ifdef GPIOB
    case PORT_B:
        GpioPort = GPIOB;
        break;
#endif

#ifdef GPIOC
    case PORT_C:
        GpioPort = GPIOC;
        break;
#endif

#ifdef GPIOD
    case PORT_D:
        GpioPort = GPIOD;
        break;
#endif

#ifdef GPIOE
    case PORT_E:
        GpioPort = GPIOE;
        break;
#endif

#ifdef GPIOF
    case PORT_F:
        GpioPort = GPIOF;
        break;
#endif

#ifdef GPIOG
    case PORT_G:
        GpioPort = GPIOG;
        break;
#endif

#ifdef GPIOH
    case PORT_H:
        GpioPort = GPIOH;
        break;
#endif

    default:
        break;
    }
    return GpioPort;
}

bool gpio_get_state(uint8_t pad_num, GpioLogicLevel_t* logic_level) {
    Pad_t pad;
    pad.byte = pad_num;
#ifdef HAS_GPIO_DIAG
    LOG_DEBUG(GPIO, "Get,P%s%u", GpioPort2Str(pad.port), pad.pin);
#endif
    GPIO_PinState value = HAL_GPIO_ReadPin(Port2PortPtr(pad.port), 1 << pad.pin);
    (*logic_level) = (uint8_t)value;
    return true;
}

bool gpio_pin_mux_get(uint8_t port, uint8_t pin, uint8_t* const mux) {
    Pad_t Pad = {
        .port = port,
        .pin = pin,
    };
    bool res = false;
    if(mux) {
        res = true;
        AltFunc_t alt = gpio_get_alt(Pad.byte);
        *mux = alt.code;
    }
    return res;
}

GpioApiMode_t gpio_mode_get(uint8_t pad_num) {
    GpioApiMode_t mode = GPIO_API_MODE_UNDEF;
    GpioStm32Mode_t stm_mode = gpio_stm_mode_get(pad_num);
    mode = GpioStmModeToMode(stm_mode);
    LOG_DEBUG(GPIO, "mode:%u", mode);
    return mode;
}

GpioPullMode_t gpio_pull_get(uint8_t pad_num) {
    GpioPullMode_t mode = GPIO__PULL_UNDEF;
    Pad_t pad;
    pad.byte = pad_num;
    GPIO_TypeDef* GPIOx = Port2PortPtr(pad.port);
    if(GPIOx) {
        uint32_t code = 0;
        uint32_t reg_mode = GPIOx->PUPDR;
        LOG_DEBUG(GPIO, "PUPDR 0x%x", reg_mode);
        code = MASK_2BIT & (reg_mode >> (2 * pad.pin));
        LOG_DEBUG(GPIO, "STMPullCode 0x%x", code);
        mode = GpioStm32Pull2GeneralPull((GpioStm32Pull_t)code);
        LOG_DEBUG(GPIO, "mode 0x%x", mode);
    } else {
#ifdef HAS_GPIO_DIAG
        LOG_ERROR(GPIO, "PortErr P%s", GpioPort2Str(pad.port));
#endif
    }
    return mode;
}

bool gpio_pull_set(Pad_t pad, GpioPullMode_t pull_mode) {
    bool res = false;


#ifdef HAS_GPIO_DIAG
    LOG_DEBUG(GPIO, "Set Pad %s, Pull %s", GpioPad2Str(pad.byte), GpioPull2Str(pull_mode));
#endif
    GpioStm32Pull_t stm_pull_mode = GpioPull2Stm32Pull(pull_mode);
    volatile GPIO_TypeDef* GPIOx = Port2PortPtr(pad.port);
    if(GPIOx) {
        uint32_t reg_mode = GPIOx->PUPDR;
        uint32_t new_reg_mode = GPIOx->PUPDR;
        LOG_DEBUG(GPIO, "Old PUPDR 0x%x", new_reg_mode);
        LOG_DEBUG(GPIO, "pin %u", pad.pin);
        uint8_t min_bit = 2 * pad.pin;
        LOG_DEBUG(GPIO, "min_bit %u,  StmPullCode %u", min_bit, stm_pull_mode);
        new_reg_mode = insert_subval_in_32bit(reg_mode, (uint32_t)stm_pull_mode, min_bit + 1, min_bit);
        LOG_DEBUG(GPIO, "New PUPDR 0x%x", new_reg_mode);
        GPIOx->PUPDR = new_reg_mode;
        res = true;
    }
    return res;
}

bool gpio_init_one(const GpioConfig_t* const Config) {
    bool res = false;
    if(Config) {
#ifdef HAS_GPIO_DIAG
        // gpio_diag_conf(Config);
#endif
        res = gpio_is_valid_pad(Config->pad.byte);
#ifdef HAS_DEBUGGER
        ASSERT_CRITICAL(true == res);
#endif
        if(res) {
            res = gpio_is_pin_single(Config->pad.byte);
            if(res) {
                res = false;
                GPIO_TypeDef* GpioPort = Port2PortPtr(Config->pad.port);
                if(GpioPort) {
                    /*Configure GPIO pin Output Level */
                    uint32_t pin_mask = PinNum2PinMask(Config->pad.pin);
                    GPIO_PinState pin_state = LogicLevel2PinState(Config->logic_level);
                    HAL_GPIO_WritePin(GpioPort, pin_mask, pin_state);
                    /*Configure GPIO pin : PtPin */
                    res = gpio_is_valid_mode(Config->mode);
#ifdef HAS_DEBUGGER
                    ASSERT_CRITICAL(true == res);
#endif
                    if(res) {
                        GPIO_InitTypeDef GPIO_InitStruct = {0};
                        GPIO_InitStruct.Pin = pin_mask;
                        GPIO_InitStruct.Mode = GpioModeToStm32Mode(Config->mode);
                        GPIO_InitStruct.Pull = GpioPull2Stm32Pull(Config->pull);
                        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH; // Config->speed;
                        GPIO_InitStruct.Alternate = Config->mux;
                        HAL_GPIO_Init(GpioPort, &GPIO_InitStruct);
                    } else {
                        res = false;
                    }
                }
            } else {
#ifdef HAS_GPIO_DIAG
                LOG_ERROR(GPIO, "ReDefine P%s%u", GpioPort2Str(Config->pad.port), Config->pad.pin);
#endif
            }
        }
    }
    return res;
}
