==> aabzel/trunk/source/mcal/mcal_at32f4/gpio/gpio_mcal.c <==
#include "gpio_mcal.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include "bit_utils.h"
#include "board_config.h"
#include "data_utils.h"
#include "debugger.h" //For assert
#include "artery_at32f4xx.h"
#include "gpio_custom_drv.h"
#include "gpio_isr.h"
#include "log.h"
#include "gpio_at32f413_mcal.h"
#define GPIO_SCFG_PORT_SOURCE_NUM(LETTER) .port_source = SCFG_PORT_SOURCE_GPIO##LETTER,
#define GPIO_SCFG_PORT_SOURCE_NUM(LETTER)
#define GPIO_INFO_COMPOSE(XXXX)                                                                                         \
    {                                                                                                                   \
        GPIO_SCFG_PORT_SOURCE_NUM(XXXX).valid = true, .port = PORT_##XXXX, .clock_type = CRM_GPIO##XXXX##_PERIPH_CLOCK, \
        .clock_type = CRM_GPIO##XXXX##_PERIPH_CLOCK,  .GPIOx = GPIO##XXXX,                                              \
    },
#define GPIOE_INFO_COMPOSE GPIO_INFO_COMPOSE(E)
#define GPIOE_INFO_COMPOSE
#define GPIOH_INFO_COMPOSE GPIO_INFO_COMPOSE(H)
#define GPIOH_INFO_COMPOSE
#define GPIOG_INFO_COMPOSE GPIO_INFO_COMPOSE(G)
#define GPIOG_INFO_COMPOSE

GpioPullMode_t GpioAt32Pull2GeneralPull(gpio_pull_type at32_pull_code) {
    GpioPullMode_t general_pull_code = GPIO__PULL_UNDEF;
    switch((uint8_t)at32_pull_code) {
    case GPIO_PULL_NONE:
        general_pull_code = GPIO__PULL_AIR;
        break;
    case GPIO_PULL_UP:
        general_pull_code = GPIO__PULL_UP;
        break;
    case GPIO_PULL_DOWN:
        general_pull_code = GPIO__PULL_DOWN;
        break;
    default:
        LOG_ERROR(GPIO, "UndefAT32PullMode %u", at32_pull_code);
        break;
    }
    return general_pull_code;
}

static GpioLogicLevel_t GpioAt32LlToGpioLl(flag_status status) {
    GpioLogicLevel_t logic_level = GPIO_LVL_UNDEF;
    switch((uint8_t)status) {
    case RESET:
        logic_level = GPIO_LVL_LOW;
        break;
    case SET:
        logic_level = GPIO_LVL_HI;
        break;
    }
    return logic_level;
}

bool gpio_clock_init(void) {
    bool res = false;
    LOG_WARNING(GPIO, "ClockInit");
    uint8_t cnt = 0;

#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "Clock On");
#endif /*HAS_LOG*/

#ifdef GPIOA
    crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE);
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "A ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOB
    crm_periph_clock_enable(CRM_GPIOB_PERIPH_CLOCK, TRUE);
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "B ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOC
    crm_periph_clock_enable(CRM_GPIOC_PERIPH_CLOCK, TRUE);
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "C ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOD
    crm_periph_clock_enable(CRM_GPIOD_PERIPH_CLOCK, TRUE);
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "D ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOE
    crm_periph_clock_enable(CRM_GPIOE_PERIPH_CLOCK, TRUE);
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "E ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOF
    crm_periph_clock_enable(CRM_GPIOF_PERIPH_CLOCK, TRUE);
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "F ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOG
    crm_periph_clock_enable(CRM_GPIOG_PERIPH_CLOCK, TRUE);
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "G ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif

#ifdef GPIOH
    crm_periph_clock_enable(CRM_GPIOH_PERIPH_CLOCK, TRUE);
#ifdef HAS_GPIO_DIAG
    LOG_INFO(GPIO, "H ClkOn");
#endif /*HAS_LOG*/
    cnt++;
#endif
    if(cnt) {
        res = true;
    } else {
        res = false;
    }
    return res;
}

gpio_type* Port2PortPtr(Port_t port) {
    gpio_type* GPIOx = NULL;
    GpioInfo_t* Info = GpioGetPortInfo(port);
    if(Info) {
        GPIOx = Info->GPIOx;
    }
    return GPIOx;
}

bool gpio_get_state(uint8_t pad_num, GpioLogicLevel_t* logic_level) {
    Pad_t pad = {0};
    (void)pad;
    bool res = false;
    pad.byte = pad_num;
#ifdef HAS_GPIO_DIAG
    // LOG_DEBUG(GPIO, "Get P%s%u", GpioPort2Str(pad.port), pad.pin);
#endif
    gpio_type* PORTx = Port2PortPtr(pad.port);
    if(PORTx) {
        if(logic_level) {
            flag_status status = gpio_input_data_bit_read(PORTx, ((uint16_t)1) << pad.pin);
            (*logic_level) = GpioAt32LlToGpioLl(status);
            res = true;
        }
    }
    return res;
}

GpioApiMode_t gpio_mode_get(uint8_t pad_num) {
    Pad_t Pad;
    GpioApiMode_t pin_mode = GPIO_API_MODE_UNDEF;
    Pad.byte = pad_num;
    /*  GPIO configuration register (GPIOx_CFGR)*/
    gpio_type* GPIOx = Port2PortPtr(Pad.port);
    if(GPIOx) {
#ifdef HAS_AT32F43X
        GpioAt32Mode_t at32_mode = GP_AT32_MODE_UNDEF;
        switch(Pad.pin) {
        case 0: {
            at32_mode = GPIOx->cfgr_bit.iomc0;
        } break;
        case 1: {
            at32_mode = GPIOx->cfgr_bit.iomc1;
        } break;
        case 2: {
            at32_mode = GPIOx->cfgr_bit.iomc2;
        } break;
        case 3: {
            at32_mode = GPIOx->cfgr_bit.iomc3;
        } break;
        case 4: {
            at32_mode = GPIOx->cfgr_bit.iomc4;
        } break;
        case 5: {
            at32_mode = GPIOx->cfgr_bit.iomc5;
        } break;
        case 6: {
            at32_mode = GPIOx->cfgr_bit.iomc6;
        } break;
        case 7: {
            at32_mode = GPIOx->cfgr_bit.iomc7;
        } break;
        case 8: {
            at32_mode = GPIOx->cfgr_bit.iomc8;
        } break;
        case 9: {
            at32_mode = GPIOx->cfgr_bit.iomc9;
        } break;
        case 10: {
            at32_mode = GPIOx->cfgr_bit.iomc10;
        } break;
        case 11: {
            at32_mode = GPIOx->cfgr_bit.iomc11;
        } break;
        case 12: {
            at32_mode = GPIOx->cfgr_bit.iomc12;
        } break;
        case 13: {
            at32_mode = GPIOx->cfgr_bit.iomc13;
        } break;
        case 14: {
            at32_mode = GPIOx->cfgr_bit.iomc14;
        } break;
        case 15: {
            at32_mode = GPIOx->cfgr_bit.iomc15;
        } break;
        }
        pin_mode = GpioArteryModeToMode(at32_mode);
#else
        pin_mode = gpio_at32f413_mode_get(Pad);
#endif

    } else {

    } // if(GPIOx)
    return pin_mode;
}

GpioDir_t gpio_dir_get(uint8_t pad_num) {
    GpioDir_t dirr = GPIO_DIR_UNDEF;
#ifdef HAS_AT32F413
    Pad_t Pad;
    Pad.byte = pad_num;
    dirr = gpio_at32f413_dir_get(Pad);
#endif

#ifdef HAS_AT32F43X
    GpioApiMode_t mode = gpio_mode_get(pad_num);
    switch((uint8_t)mode) {
    case GPIO_API_MODE_GPIO:
        dirr = GPIO_DIR_UNDEF;
        break;

    case GPIO_API_MODE_I2C:
    case GPIO_API_MODE_ALT1:
    case GPIO_API_MODE_ALT2:
        dirr = GPIO_DIR_UNDEF;
        break;

    case GPIO_API_MODE_INPUT:
    case GPIO_API_MODE_ANALOG:
        dirr = GPIO_DIR_IN;
        break;

    case GPIO_API_MODE_HW_PWM:
    case GPIO_API_MODE_OUTPUT:
        dirr = GPIO_DIR_OUT;
        break;
    }
#endif
    return dirr;
}

GpioPullMode_t gpio_pull_get(uint8_t pad_num) {
    GpioPullMode_t mode = GPIO__PULL_UNDEF;
    Pad_t Pad;
    Pad.byte = pad_num;
    gpio_type* GPIOx = Port2PortPtr(Pad.port);
    if(GPIOx) {
#ifdef HAS_AT32F43X
        uint32_t code = 0;
        switch(Pad.pin) {
        case 0:
            code = GPIOx->pull_bit.pull0;
            break;
        case 1:
            code = GPIOx->pull_bit.pull1;
            break;
        case 2:
            code = GPIOx->pull_bit.pull2;
            break;
        case 3:
            code = GPIOx->pull_bit.pull3;
            break;
        case 4:
            code = GPIOx->pull_bit.pull4;
            break;
        case 5:
            code = GPIOx->pull_bit.pull5;
            break;
        case 6:
            code = GPIOx->pull_bit.pull6;
            break;
        case 7:
            code = GPIOx->pull_bit.pull7;
            break;
        case 8:
            code = GPIOx->pull_bit.pull8;
            break;
        case 9:
            code = GPIOx->pull_bit.pull9;
            break;
        case 10:
            code = GPIOx->pull_bit.pull10;
            break;
        case 11:
            code = GPIOx->pull_bit.pull11;
            break;
        case 12:
            code = GPIOx->pull_bit.pull12;
            break;
        case 13:
            code = GPIOx->pull_bit.pull13;
            break;
        case 14:
            code = GPIOx->pull_bit.pull14;
            break;
        case 15:
            code = GPIOx->pull_bit.pull15;
            break;
        }

        LOG_DEBUG(GPIO, "AT32PullCode 0x%x", code);
        mode = GpioAt32Pull2GeneralPull((gpio_pull_type)code);
        LOG_DEBUG(GPIO, "mode 0x%x", mode);
#else        // HAS_AT32F43X
        mode = gpio_at32f413_pull_get(Pad);
#endif       // HAS_AT32F43X
    } else { // if(GPIOx) {
#ifdef HAS_GPIO_DIAG
        LOG_ERROR(GPIO, "PortErr P%s", GpioPort2Str(Pad.port));
#endif
    }
    return mode;
}

bool gpio_pull_set(uint8_t pad_num, GpioPullMode_t pull_mode) {
    bool res = false;
    Pad_t pad;
    pad.byte = pad_num;
#ifdef HAS_GPIO_DIAG
    LOG_DEBUG(GPIO, "Set Pad %u=%s, Pull %s", pad_num, GpioPad2Str(pad.byte), GpioPull2Str(pull_mode));
#endif
    // gpio_pull_type at32_pull_mode = GpioPullToAt32Pull(pull_mode);
    volatile gpio_type* GPIOx = Port2PortPtr(pad.port);
    if(GPIOx) {
        res = gpio_is_valid_pull(pull_mode);
        if(res) {

#ifdef HAS_AT32F43X
            uint8_t code = GpioPullToArteryPull(pull_mode);
            switch(pad.pin) {
            case 0: {
                GPIOx->pull_bit.pull0 = code;
            } break;
            case 1: {
                GPIOx->pull_bit.pull1 = code;
            } break;
            case 2: {
                GPIOx->pull_bit.pull2 = code;
            } break;
            case 3: {
                GPIOx->pull_bit.pull3 = code;
            } break;
            case 4: {
                GPIOx->pull_bit.pull4 = code;
            } break;
            case 5: {
                GPIOx->pull_bit.pull5 = code;
            } break;
            case 6: {
                GPIOx->pull_bit.pull6 = code;
            } break;
            case 7: {
                GPIOx->pull_bit.pull7 = code;
            } break;
            case 8: {
                GPIOx->pull_bit.pull8 = code;
            } break;
            case 9: {
                GPIOx->pull_bit.pull9 = code;
            } break;
            case 10: {
                GPIOx->pull_bit.pull10 = code;
            } break;
            case 11: {
                GPIOx->pull_bit.pull11 = code;
            } break;
            case 12: {
                GPIOx->pull_bit.pull12 = code;
            } break;
            case 13: {
                GPIOx->pull_bit.pull13 = code;
            } break;
            case 14: {
                GPIOx->pull_bit.pull14 = code;
            } break;
            case 15: {
                GPIOx->pull_bit.pull15 = code;
            } break;
            default: {
            } break;
            }

            res = true;
#endif
        }
    }
    return res;
}

static gpio_output_type GpioModeToAt32OutType(GpioDir_t dirr) {
    gpio_output_type output_type = GPIO_MODE_INPUT;
    switch((uint8_t)dirr) {
    case GPIO_DIR_OUT:
        output_type = GPIO_OUTPUT_PUSH_PULL;
        break;
    case GPIO_DIR_OUT_PUSH_PULL:
        output_type = GPIO_OUTPUT_PUSH_PULL;
        break;
    case GPIO_DIR_INOUT:
        output_type = GPIO_OUTPUT_PUSH_PULL;
        break;
    case GPIO_DIR_NONE:
        output_type = GPIO_OUTPUT_PUSH_PULL;
        break;
    case GPIO_DIR_IN:
        output_type = GPIO_OUTPUT_PUSH_PULL;
        break;
    case GPIO_DIR_INOUT_OPEN_DRAIN:
        output_type = GPIO_OUTPUT_OPEN_DRAIN;
        break;
    case GPIO_DIR_OUT_OPEN_DRAIN:
        output_type = GPIO_OUTPUT_OPEN_DRAIN;
        break;
    }
    return output_type;
}

static gpio_mode_type GpioModeToAt32Mode(GpioApiMode_t mode) {
    gpio_mode_type gpio_mode = GPIO_MODE_INPUT;
    switch((uint8_t)mode) {
    case GPIO_API_MODE_GPIO:
        gpio_mode = GPIO_MODE_OUTPUT;
        break;
    case GPIO_API_MODE_ALT1:
        gpio_mode = GPIO_MODE_MUX;
        break;
    case GPIO_API_MODE_ALT2:
        gpio_mode = GPIO_MODE_MUX;
        break;
    case GPIO_API_MODE_HW_PWM:
        gpio_mode = GPIO_MODE_MUX;
        break;
    case GPIO_API_MODE_OUTPUT:
        gpio_mode = GPIO_MODE_OUTPUT;
        break;
    case GPIO_API_MODE_INPUT_EXINT:
    case GPIO_API_MODE_INPUT:
        gpio_mode = GPIO_MODE_INPUT;
        break;
    case GPIO_API_MODE_ANALOG:
        gpio_mode = GPIO_MODE_ANALOG;
        break;
    }
    return gpio_mode;
}

bool gpio_pin_mux_get(uint8_t port, uint8_t pin, uint8_t* const mux) {
    bool res = false;
    uint8_t mux_val = 0;
    gpio_type* GPIOx = Port2PortPtr(port);
    if(GPIOx) {
#ifdef HAS_AT32F43X
        if(pin <= 7) {
            mux_val = MASK_4BIT & (GPIOx->muxl >> (pin * 4));
            res = true;
        } else if(pin <= 15) {
            mux_val = MASK_4BIT & (GPIOx->muxh >> ((pin - 8) * 4));
            res = true;
        } else {
            res = false;
        }
#else
        Pad_t Pad = {
            .port = port,
            .pin = pin,
        };
        res = gpio_at32f413_pin_mux_get(Pad, mux);
#endif

#if 0
        switch(pin){
        case 0:
        case 1:
        case 2:
        case 3:
        case 4:
        case 5:
        case 6:
        case 7: {
            mux_val= MASK_4BIT & (GPIOx->muxl>>(pin*4));
            res = true;
        } break;
        case 8:
        case 9:
        case 10:
        case 11:
        case 12:
        case 13:
        case 14:
        case 15:{
            mux_val= MASK_4BIT & (   GPIOx->muxh>>((pin-8)*4));
            res = true;

        } break;
        default:  {
        } break;
        }
#endif
    }

    if(res) {
        *mux = mux_val;
    } else {
        LOG_ERROR(GPIO, "PinErr");
    }
    return res;
}

bool gpio_init_one(const GpioConfig_t* const Config) {
    bool res = false;
    if(Config) {
#ifdef HAS_GPIO_DIAG
        GpioConfigDiag(Config);
#endif
        res = gpio_is_pin_single(Config->pad.byte);
        if(res) {
#ifdef HAS_GPIO_DIAG
            LOG_DEBUG(GPIO, "Single P%s%u", GpioPort2Str(Config->pad.port), Config->pad.pin);
#endif
            res = false;
            gpio_type* GPIOx = Port2PortPtr(Config->pad.port);
            if(GPIOx) {
                GpioInfo_t* Info = GpioGetPortInfo(Config->pad.port);
                if(Info) {
                    crm_periph_clock_enable(Info->clock_type, TRUE);
#ifdef HAS_GPIO_DIAG
                    LOG_INFO(GPIO, "%s,ClkOn", GpioPort2Str(Config->pad.port));
#endif
                }
                /*Configure GPIO pin Output Level */
                uint32_t pin_mask = PinNum2PinMask(Config->pad.pin);

                /*Configure GPIO pin : PtPin */
                res = gpio_is_valid_mode(Config->mode);
#ifdef HAS_DEBUGGER
                ASSERT_CRITICAL(true == res);
#endif
                if(res) {
                    gpio_init_type GpioInitStruct = {0};
                    gpio_default_para_init(&GpioInitStruct);

                    GpioInitStruct.gpio_pins = pin_mask;
                    GpioInitStruct.gpio_mode = GpioModeToAt32Mode(Config->mode);
                    GpioInitStruct.gpio_pull = GpioPullToAt32Pull(Config->pull);
                    GpioInitStruct.gpio_out_type = GpioModeToAt32OutType(Config->dir);
                    GpioInitStruct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
                    gpio_init(GPIOx, &GpioInitStruct);

                    switch((uint32_t)Config->mode) {
                    case GPIO_API_MODE_ALT1:
                    case GPIO_API_MODE_ALT2: {
#ifdef HAS_AT32F43X
                        gpio_pin_mux_config(GPIOx, ((gpio_pins_source_type)Config->pad.pin),
                                            (gpio_mux_sel_type)Config->mux);
#endif

                    } break;

                    case GPIO_API_MODE_INPUT_EXINT: {
#if 0
                            res = false;
                            exint_init_type ExIntInitStruct={0};
                            scfg_exint_line_config(Info->port_source,(scfg_pins_source_type) Config->pad.pin);

                            exint_default_para_init(&ExIntInitStruct);
                            ExIntInitStruct.line_enable = TRUE;
                            ExIntInitStruct.line_mode = EXINT_LINE_INTERRUPUT;
                            uint32_t line_select = num_exint_line(Config->pad.pin);
                            ExIntInitStruct.line_select = line_select;
                            exint_polarity_config_type line_polarity = GpioExpIntPotarityToArtery(Config->int_edge);
                            ExIntInitStruct.line_polarity = line_polarity;
                            exint_init(&ExIntInitStruct);

                            nvic_priority_group_config(NVIC_PRIORITY_GROUP_4);

                            const ExtIntInfo_t* ExtIntNode=ExtIntGetInfo(Config->pad.pin);
                            if(ExtIntNode){
                                nvic_irq_enable(ExtIntNode->irq_n, 2, 2);
                                res = true;
                            }
#endif

                    } break;
                    default:
                        break;
                    }

                    res = gpio_logic_level_set(Config->pad.byte, Config->logic_level);
                    // res = true;

                } else {
#ifdef HAS_GPIO_DIAG
                    LOG_ERROR(GPIO, "ModeErr P%s%u", GpioPort2Str(Config->pad.port), Config->pad.pin);
#endif
                    res = false;
                }
            }
        } else {
#ifdef HAS_GPIO_DIAG
            LOG_ERROR(GPIO, "ReDefine P%s%u", GpioPort2Str(Config->pad.port), Config->pad.pin);
#endif
        }
    }
    return res;
}
